--- a/resources/[core]/phone/html/css/settings.css
+++ b/resources/[core]/phone/html/css/settings.css
@@ -4,7 +4,7 @@
     display: none;
     height: 100%;
     width: 100%;
-    background: #202731;
+    background: rgba(36, 36, 36, 90%);
     overflow: hidden;
 }
 
@@ -33,19 +33,19 @@
 
 .settings-app-tab {
     position: relative;
-    width: 88%;
+    width: 90%;
     border-radius: 0.15rem;
     height: 6vh;
     margin-bottom: 10px;
     color: white;
-    background: #2c465f;
-    left: 5.5%;
+    background: rgba(23, 23, 23, 90%);
+    left: 15px;
     box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
 }
 
 .settings-app-tab:hover {
-    background-color: #0d1218c0;
-    transition: .2s ease;
+    background-color: #dc143c;
+    transition: .5s ease;
 }
 
 .settings-app-tab-header {
@@ -131,14 +131,14 @@
     height: 6vh;
     margin-bottom: 10px;
     color: white;
-    background: #2c465f;
+    background: rgba(23, 23, 23, 90%);
     left: 15px;
     box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
 }
 
 .background-option:hover {
-    background-color: #0d1218c0;
-    transition: .2s ease;
+    background-color: #dc143c;
+    transition: .5s ease;
 }
 
 .background-option-icon {
@@ -204,7 +204,7 @@
 }
 
 .background-button:hover {
-    border-top: .3vh solid #0d1218c0;
+    border-top: .3vh solid #dc143c;
 }
 
 .background-custom {
@@ -270,7 +270,7 @@
 
 .custom-background-button:hover {
     font-weight: bolder;
-    color: #0d1218c0;
+    color: #DC143C;
 }
 
 
@@ -288,7 +288,7 @@
     height: 6vh;
     margin-bottom: 10px;
     color: white;
-    background: #2c465f;
+    background: rgba(23, 23, 23, 90%);
     left: 15px;
     box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
 }
@@ -355,7 +355,7 @@
 }
 
 .profilepicture-button:hover {
-    border-top: .3vh solid #0d1218c0;
+    border-top: .3vh solid #dc143c;
 }
 
 .profilepicture-custom {
@@ -419,11 +419,13 @@
 
 .custom-profilepicture-button:hover {
     font-weight: bolder;
-    color: #0d1218c0;
+    color: #DC143C;
 }
 
+/* The switch - the box around the slider */
 .switch {
     position: absolute;
+    /* display: inline-block; */
     width: 50px;
     height: 24px;
     top: 50%;
@@ -431,12 +433,14 @@
     transform: translateY(-50%);
 }
 
+/* Hide default HTML checkbox */
 .switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
+/* The slider */
 .slider {
     position: absolute;
     cursor: pointer;
@@ -475,6 +479,7 @@ input:checked + .slider:before {
     transform: translateX(26px);
 }
 
+/* Rounded sliders */
 .slider.round {
     border-radius: 24px;
 }
