--- a/resources/[core]/phone/html/css/twitter.css
+++ b/resources/[core]/phone/html/css/twitter.css
@@ -4,7 +4,7 @@
     display: none;
     height: 100%;
     width: 100%;
-    background: #202731;
+    background: rgb(36, 36, 36);
     overflow: hidden;
 }
 
@@ -40,15 +40,16 @@
 .twitter-app-header {
     position: relative;
     padding: 5vh 0 0 1.85vh;
+    font-family: 'Poppins', sans-serif;
     font-size: 2vh;
 }
 
 .twitter-home-tab {
     display: block;
     position: absolute;
-    height: 85%;
+    height: 75%;
     width: 100%;
-    top: 8vh;
+    top: 12vh;
     overflow: hidden;
     overflow-y: scroll !important;
     overflow-x: hidden !important;
@@ -117,9 +118,9 @@
     height: auto;
     width: 90%;
     margin-bottom: 0.5vh;
-    background-color: #0c62c5;
-    border-radius: 2px;
-    left: 5.4%;
+    background-color: #1DA1F2;
+    border-radius: 7px;
+    left: 15px;
     color: white;
 }
 
@@ -169,11 +170,13 @@
 .tweet-tweeter {
     padding-left: 6vh;
     padding-top: .6vh;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.1vh;
 }
 
 .tweet-tweeter > span {
     position: relative;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.0vh;
     top: -.1vh;
 }
@@ -182,6 +185,7 @@
     margin-top: .3vh;
     padding-left: 6vh;
     top: .5vh;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.3vh;
     padding-bottom: 1vh;
     overflow-wrap: break-word;
@@ -191,24 +195,25 @@
 .twitter-new-tweet {
     position: absolute;
     bottom: 0;
-    top: 2%;
-    right: -2%;
+    right: 0;
     width: 5.5vh;
     height: 5.5vh;
+    background-color: #1DA1F2;
     margin: 2.2vh;
     z-index: 101;
     border-radius: 50%;
     text-align: center;
-    transition: .2s;
+    transition: .1s;
 }
 
-.twitter-new-tweet > i:hover {
-    color: rgb(201, 201, 201);
+.twitter-new-tweet:hover {
+    background-color: rgb(62, 179, 252);
 }
 
 .twitter-new-tweet > i {
     line-height: 5.5vh;
     font-size: 2vh;
+    transform: rotate(-20deg);
     color: white;
 }
 
@@ -227,6 +232,7 @@
 .twitter-new-tweet-header {
     position: relative;
     padding: 6vh 0 0 9vh;
+    font-family: 'Poppins', sans-serif;
     font-size: 2vh;
     color: white;
 }
@@ -243,6 +249,7 @@
     outline: none;
     border: 2px solid #1DA1F2;
     resize: none;
+    font-family: 'Poppins', sans-serif;
     padding: 0.87vh;
     font-size: 1.4vh;
     top: 12vh;
@@ -257,6 +264,7 @@
 
 #tweet-new-message::placeholder {
     font-size: 1.4vh;
+    font-family: 'Poppins', sans-serif;
 }
 
 #tweet-new-url{
@@ -270,6 +278,7 @@
     background: rgba(23, 23, 23, 90%);
     outline: none;
     resize: none;
+    font-family: 'Poppins', sans-serif;
     padding: 0.87vh;
     font-size: 1.4vh;
     top: 30vh;
@@ -297,6 +306,7 @@
     height: 100%;
     text-align: center;
     line-height: 4.5vh;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.5vh;
     border-top: .3vh solid #6ab04c00;
     transition: .1s;
@@ -312,6 +322,7 @@
     top: 4vh;
     width: 100%;
     font-size: 2vh;
+    font-family: 'Poppins', sans-serif;
     color: white;
 }
 
@@ -343,6 +354,7 @@
     position: absolute;
     top: .8vh;
     left: 1vh;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.1vh;
     color: white;
 }
@@ -351,6 +363,7 @@
     position: absolute;
     top: 2.5vh;
     left: 1vh;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.4vh;
     color: white;
 }
@@ -358,6 +371,7 @@
     position: absolute;
     bottom: .8vh;
     left: 1vh;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.1vh;
     color: white;
 }
