--- a/resources/[core]/phone/html/css/crypto.css
+++ b/resources/[core]/phone/html/css/crypto.css
@@ -4,7 +4,7 @@
     display: none;
     height: 100%;
     width: 100%;
-    background-color: #202731;
+    background-color: rgb(38, 38, 38);
     overflow: hidden;
 }
 
@@ -22,7 +22,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: #202731;
+    background-color: rgb(38, 38, 38);
 }
 
 .crypto-action-page-sell-crypto {
@@ -30,7 +30,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: #202731;
+    background-color: rgb(38, 38, 38);
 }
 
 .crypto-action-page-transfer-crypto {
@@ -38,7 +38,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: #202731;
+    background-color: rgb(38, 38, 38);
 }
 
 .crypto-action-page-buy-crypto-footer {
@@ -61,7 +61,7 @@
 }
 
 .crypto-action-page-buy-crypto-footer-button:hover {
-   color: #8ee074;
+   color: #dc143c;
 }
 
 @keyframes Shake {
@@ -81,6 +81,8 @@
         transform: rotate(5deg);
     }
 }
+
+/* #2E3B4B */
 
 .crypto-header {
     position: absolute;
@@ -111,14 +113,14 @@
 }
 
 .crypto-header-footer-item-selected {
-    border-bottom: .2vh solid #8ee074;
+    border-bottom: .2vh solid #dc143c;
 }
 
 .crypto-page {
     position: absolute;
     height: 57%;
     width: 100%;
-    background: #202731;
+    background: rgb(38, 38, 38);
     bottom: 10px;
     margin: 0 auto;
     left: 0;
@@ -203,13 +205,14 @@
 
 .cryptotab-transactions-block {
     position: relative;
-    width: 86%;
+    width: 95%;
     height: 7vh;
-    margin-left: 5.6%;
-    margin-top: 2%;
-    background: #2c465f;
+    margin: 0 auto;
+    margin-bottom: .8vh;
+    margin-top: .6vh;
+    background: rgba(23, 23, 23, 90%);
     border-radius: 0.15rem;
-    box-shadow: 0rem 0rem 0.2rem 0.02rem #000000a6;
+    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
 }
 
 .cryptotab-transactions-block i {
@@ -255,15 +258,14 @@
 
 .cryptotab-course-block {
     position: relative;
-    width: 86%;
+    width: 95%;
     height: 7vh;
-    margin-left: 6.5%;
-    margin-top: 2%;
+    margin: 0 auto;
     margin-bottom: .8vh;
     margin-top: .6vh;
-    background: #2c465f;
+    background: rgba(23, 23, 23, 90%);
     border-radius: 0.15rem;
-    box-shadow: 0rem 0rem 0.2rem 0.02rem #000000a6;
+    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
 }
 
 .cryptotab-course-block i {
@@ -320,15 +322,14 @@
 .cryptotab-general-action {
     position: relative;
     color: white;
-    width: 86%;
+    width: 90%;
     height: 6vh;
-    margin-left: 6.5%;
-    margin-top: 2%;
+    margin: 1vh auto 0px;
     font-family: Poppins, sans-serif;
     transition: all 0.05s linear 0s;
-    background: #2c465f;
+    background: rgba(23, 23, 23, 90%);
     border-radius: 0.15rem;
-    box-shadow: 0rem 0rem 0.2rem 0.02rem #000000a6;
+    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
 }
 
 .cryptotab-general-action > i {
@@ -356,7 +357,7 @@
 }
 
 .cryptotab-general-action:hover {
-    background-color: #0d1218c0;
+    background-color: #dc143c;
 }
 
 .crypto-action-page-buy-crypto-input-money {
@@ -366,6 +367,7 @@
     background: none;
     border: none;
     outline: none;
+    /* border-bottom: 2px solid #000000; */
     font-family: 'Poppins', sans-serif;
     height: 3.5vh;
     width: 18vh;
@@ -430,6 +432,9 @@
     color: white;
 }
 
+/* Sell */
+
+
 .crypto-action-page-sell-crypto-input-money {
     position: absolute;
     top: 22.4vh;
@@ -437,6 +442,7 @@
     background: none;
     border: none;
     outline: none;
+    /* border-bottom: 2px solid #000000; */
     font-family: 'Poppins', sans-serif;
     height: 3.5vh;
     width: 18vh;
@@ -474,6 +480,8 @@
     outline: none;
     border-bottom: 2px solid #000000;
     font-family: 'Poppins', sans-serif;
+    /* background: rgb(33,36,43); */
+    /* background: linear-gradient(0deg, rgba(33,36,43,0.5) 0%, rgba(178,132,254,0) 100%); */
     height: 3.5vh;
     width: 18vh;
     text-indent: .4vh;
@@ -564,6 +572,8 @@
     color: white;
 }
 
+/*  */
+
 .crypto-action-page-transfer-crypto-input-coins{
     position: absolute;
     top: 15vh;
@@ -598,10 +608,4 @@
     left: 3vh;
     font-size: 2.5vh;
     color: white;
-}
-
-.crypto-buy-ammount-for-update{
-    width: 86%;
-    color: whitesmoke;
-    margin-left: 10%;
 }
