--- a/resources/[core]/phone/html/css/garage.css
+++ b/resources/[core]/phone/html/css/garage.css
@@ -1,15 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
-.garage-icon {
-    margin-top: .5vh;
-    width: 3.4vh;
-}
-
 .garage-app {
     display: none;
     height: 100%;
     width: 100%;
-    background: #202731;
+    background: rgb(36, 36, 36);
     overflow: hidden;
 }
 
@@ -20,6 +15,7 @@
     text-align: center;
     line-height: 13.5vh;
     color: white;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.5vh;
 }
 
@@ -56,29 +52,31 @@
     position: relative;
     height: 7vh;
     width: 100%;
-    background-color: #2c465f;
-    border-radius: 4px;
+    background-color: rgba(23, 23, 23, 90%);
+    border-radius: 1vh;
     transition: .08s linear;
-    margin-bottom: 1.5%;
+    margin-bottom: 1vh;
+    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
 }
 
 .garage-vehicle-firstletter {
     position: relative;
     line-height: 7vh;
     left: 1.2vh;
-    background-color: #2c465f;
+    background-color: #ee5253;
     padding-top: 1.1vh;
     padding-bottom: 1.1vh;
     padding-left: 1.6vh;
     padding-right: 1.6vh;
     border-radius: 50%;
     color: white;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.8vh;
     transition: .05s linear;
 }
 
 .garage-vehicle:hover {
-    background-color: #0d1218c0;
+    background-color: #dc143c;
 }
 
 .garage-vehicle-name {
@@ -87,10 +85,12 @@
     color: white;
     line-height: 7vh;
     font-size: 1.2vh;
+    font-family: 'Poppins', sans-serif;
 }
 
 .garage-cardetails {
     position: absolute;
+    /* background-color: rgba(255, 255, 255, 0.1); */
     height: 76%;
     width: 84%;
     margin: 0 auto;
@@ -102,88 +102,96 @@
 .vehicle-brand {
     position: relative;
     width: 100%;
-    background-color: #2c465f;
+    background-color: rgb(54, 54, 54);
     padding: .8vh;
     color: white;
+    font-family: 'Poppins', sans-serif;
     border-bottom: .1vh solid #fff;
-    margin-bottom: 1.5%;
+    margin-bottom: 1vh;
     font-size: 1.2vh;
 }
 
 .vehicle-model {
     position: relative;
     width: 100%;
-    background-color: #2c465f;
+    background-color: rgb(54, 54, 54);
     padding: .8vh;
     color: white;
+    font-family: 'Poppins', sans-serif;
     border-bottom: .1vh solid #fff;
-    margin-bottom: 1.5%;
+    margin-bottom: 1vh;
     font-size: 1.2vh;
 }
 
 .vehicle-plate {
     position: relative;
     width: 100%;
-    background-color: #2c465f;
+    background-color: rgb(54, 54, 54);
     padding: .8vh;
     color: white;
+    font-family: 'Poppins', sans-serif;
     border-bottom: .1vh solid #fff;
-    margin-bottom: 1.5%;
+    margin-bottom: 1vh;
     font-size: 1.2vh;
 }
 
 .vehicle-garage {
     position: relative;
     width: 100%;
-    background-color: #2c465f;
+    background-color: rgb(54, 54, 54);
     padding: .8vh;
     color: white;
+    font-family: 'Poppins', sans-serif;
     border-bottom: .1vh solid #fff;
-    margin-bottom: 1.5%;
+    margin-bottom: 1vh;
     font-size: 1.2vh;
 }
 
 .vehicle-status {
     position: relative;
     width: 100%;
-    background-color: #2c465f;
+    background-color: rgb(54, 54, 54);
     padding: .8vh;
     color: white;
+    font-family: 'Poppins', sans-serif;
     border-bottom: .1vh solid #fff;
-    margin-bottom: 1.5%;
+    margin-bottom: 1vh;
     font-size: 1.2vh;
 }
 
 .vehicle-fuel {
     position: relative;
     width: 100%;
-    background-color: #2c465f;
+    background-color: rgb(54, 54, 54);
     padding: .8vh;
     color: white;
+    font-family: 'Poppins', sans-serif;
     border-bottom: .1vh solid #fff;
-    margin-bottom: 1.5%;
+    margin-bottom: 1vh;
     font-size: 1.2vh;
 }
 
 .vehicle-engine {
     position: relative;
     width: 100%;
-    background-color: #2c465f;
+    background-color: rgb(54, 54, 54);
     padding: .8vh;
     color: white;
+    font-family: 'Poppins', sans-serif;
     border-bottom: .1vh solid #fff;
-    margin-bottom: 1.5%;
+    margin-bottom: 1vh;
     font-size: 1.2vh;
 }
 
 .vehicle-body {
     position: relative;
     width: 100%;
-    background-color: #2c465f;
+    background-color: rgb(54, 54, 54);
     padding: .8vh;
     color: white;
+    font-family: 'Poppins', sans-serif;
     border-bottom: .1vh solid #fff;
-    margin-bottom: 1.5%;
+    margin-bottom: 1vh;
     font-size: 1.2vh;
 }
 
@@ -206,22 +214,13 @@
     height: 5vh;
     background-color: rgb(233, 233, 233);
     border-radius: .3vh;
-    transition: .2s linear;
+    transition: .05s linear;
     text-align: center;
     line-height: 5vh;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.4vh;
 }
 
-#return-button{
-    background: #f5a15b;
-}
-#return-button:hover{
-    background: #c27e47;
-}
-
-#track-vehicle{
-    background: #8ee074
-}
-#track-vehicle:hover{
-    background: #6cac59
+.return-track > div:hover {
+    background-color: rgb(212, 212, 212);
 }
