--- a/resources/[core]/phone/html/css/lawyers.css
+++ b/resources/[core]/phone/html/css/lawyers.css
@@ -5,7 +5,7 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-    background: #202731;
+    background: rgb(36, 36, 36);
 }
 
 .lawyers-header {
@@ -14,7 +14,7 @@
     height: 12vh;
     top: 0;
     color: white;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.8vh;
 }
 
@@ -54,9 +54,9 @@
     width: 95%;
     height: 6vh;
     margin: 2.5%;
-    background: #2c465f;
+    background: rgba(23, 23, 23, 90%);
     border-radius: 0.15rem;
-    box-shadow: 0rem 0rem 0.2rem 0.02rem #000000a6;
+    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
 }
 
 .lawyer-list-firstletter {
@@ -70,7 +70,7 @@
     left: 1vh;
     line-height: 3.5vh;
     border-radius: 50%;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.8vh;
     color: white;
 }
@@ -80,7 +80,7 @@
     top: 50%;
     transform: translateY(-50%);
     left: 5.5vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.5vh;
     max-width: 14vh;
     white-space: nowrap;
@@ -93,7 +93,7 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.3vh;
     margin: 0 auto;
     left: 0;
@@ -115,7 +115,7 @@
 }
 
 .lawyer-list-call:hover {
-    color: #8ee074;
+    color: rgb(49, 214, 60);
     opacity: .8;
     transform: rotate(0deg);
     cursor: pointer;
