--- a/resources/[core]/phone/html/css/mail.css
+++ b/resources/[core]/phone/html/css/mail.css
@@ -4,7 +4,7 @@
     display: none;
     height: 100%;
     width: 100%;
-    background: #202731;
+    background: rgb(36, 36, 36);
     overflow: hidden;
 }
 
@@ -17,14 +17,14 @@
     display: block;
     height: 14vh;
     width: 100%;
-    background: #202731;
+    background: rgb(36, 36, 36);
 }
 
 #mail-header-text {
     position: absolute;
     top: 5vh;
     left: 12vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.5vh;
     color: white;
 }
@@ -33,7 +33,7 @@
     position: absolute;
     top: 7vh;
     left: 6vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.3vh;
     color: white;
 }
@@ -42,7 +42,7 @@
     position: absolute;
     top: 10vh;
     right: 1.5vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1vh;
     color: white;
 }
@@ -64,24 +64,24 @@
 .mail {
     position: relative;
     height: 7.5vh;
-    width: 88%;
-    left: 5.5%;
+    width: 90%;
+    left: 15px;
     margin-top: 2px;
     margin-bottom: 10px;
     transition: .05s ease-in-out;
-    background: #2c465f;
+    background: rgba(23, 23, 23, 90%);
     border-radius: 0.15rem;
-    /* box-shadow: 0rem 0rem 0.1rem 0.05rem #000000; */
+    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
 }
 
 .mail:hover {
-    background-color: #0d1218c0;
+    background-color: #dc143c;
     transition: .05s ease-in-out;
 }
 
 .mail-sender {
     position: absolute;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.6vh;
     color: white;
     left: 0.5vh;
@@ -92,7 +92,7 @@
     position: absolute;
     top: 3.3vh;
     left: 0.5vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.15vh;
     color: white;
     max-width: 18vh;
@@ -111,7 +111,7 @@
 
 .mail-time {
     position: absolute;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.1vh;
     color: white;
     right: 0.5vh;
@@ -122,7 +122,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background: #202731;
+    background: rgb(36, 36, 36);
     overflow: hidden;
     top: 0;
     left: -30vh;
@@ -147,7 +147,7 @@
 }
 
 .mail-back:hover #mail-back {
-    color: #f5a15b;
+    color: #dc143c;
     transition: .05s ease-in-out;
 }
 
@@ -156,7 +156,7 @@
     color: white;
     top: 8vh;
     left: 2vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.8vh;
     max-width: 22vh;
 }
@@ -171,7 +171,7 @@
     position: absolute;
     top: 13vh;
     left: 2vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.1vh;
     color: white;
 }
@@ -193,7 +193,7 @@
     height: calc(100% - 250px);
     top: 17.3vh;
     left: 2vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.3vh;
     color: white;
     max-width: 23vh;
@@ -217,7 +217,7 @@
     position: absolute;
     width: 100%;
     height: 4vh;
-    bottom: 1%;
+    bottom: 40px;
 }
 
 .opened-mail-footer-item {
@@ -233,7 +233,7 @@
 }
 
 .opened-mail-footer-item:hover {
-    color: #f5a15b;
+    color: #dc143c;
 }
 
 .opened-mail-footer-item:hover .mail-icon {
@@ -260,25 +260,15 @@
     }
 }
 
-
 /* Advert App */
-
-
-.advert-icon {
-    /* margin-top: -0.1vh; */
-    margin-left: -0.1vh;
-    width: 4.8vh;
-}
 
 .advert-app {
     display: none;
     height: 100%;
     width: 100%;
-    background: #202731;
+    background: rgb(36, 36, 36);
     overflow: hidden;
 }
-
-
 
 .advert-header {
     position: absolute;
@@ -291,7 +281,7 @@
     position: absolute;
     top: 6vh;
     left: 8vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.8vh;
     color: white;
 }
@@ -300,7 +290,7 @@
     position: absolute;
     top: 9vh;
     left: 6vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.4vh;
     color: white;
 }
@@ -308,8 +298,8 @@
 .advert-list {
     position: absolute;
     width: 99%;
-    height: 48.5vh;
-    top: 8vh;
+    height: 39.5vh;
+    top: 12vh;
     left: .1vh;
     overflow-x: hidden !important;
     overflow-y: scroll;
@@ -320,7 +310,7 @@
 }
 .advert {
     position: relative;
-    background-color: #fde755;
+    background-color: #ff8f1a;
     height: auto;
     min-height: 4vh;
     width: 90%;
@@ -328,20 +318,20 @@
     margin: 0 auto;
     margin-top: 2vh;
     margin-bottom: 2vh;
-    border-radius: 2px;
+    border-radius: 0.15rem;
     text-align: center;
 }
 
 .advert > p {
     margin-top: 1.5vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     max-width: 25vh;
     color: black;
     font-weight: bolder;
 }
 
 .advert:hover {
-    background-color: #c2b142;
+    background-color: rgb(255, 154, 46);
     transition: .05s ease-in-out;
 }
 
@@ -350,7 +340,7 @@
     top: .8vh;
     color: black;
     font-weight: bolder;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.3vh;
 }
 
@@ -358,14 +348,13 @@
     position: absolute;
     width: 100%;
     height: 4.2vh;
-    top: 3.5vh;
+    top: 52.6vh;
     transition: .1s ease-in-out;
-    text-align: right;
+    text-align: center;
     line-height: 4.2vh;
     font-size: 2.3vh;
-    padding-right: 9%;
     color: white;
-    /* background-color: rgb(36, 36, 36); */
+    background-color: rgb(36, 36, 36);
 }
 
 .test-slet:hover {
@@ -373,9 +362,9 @@
 }
 
 .test-slet:hover .test-icon {
-    color: #2c465f;
+    color: #ff8f1a;
     transition: .1s ease-in-out;
-    /* animation: Shake 1s infinite; */
+    animation: Shake 1s infinite;
 }
 
 .new-advert {
@@ -428,7 +417,7 @@
     position: absolute;
     top: 6vh;
     left: 6vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.8vh;
     color: white;
 }
@@ -442,7 +431,7 @@
     background-color: rgba(23, 23, 23, 90%);
     outline: none;
     resize: none;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     padding: 0.87vh;
     font-size: 1.4vh;
     top: 45vh;
@@ -471,7 +460,7 @@
     border: 2px solid rgb(255, 154, 46);
     background-color: rgba(23, 23, 23, 90%);
     padding: 1.5vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     transition: .1s linear;
 }
 
@@ -483,7 +472,7 @@
 .nomails {
     text-align: center;
     color: white;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.5vh;
     line-height: 20vh;
 }
