--- a/resources/[core]/phone/html/css/main.css
+++ b/resources/[core]/phone/html/css/main.css
@@ -16,11 +16,13 @@
     :root { font-size: 9px; }
 }
 
+/* CSS Reset */
 body {
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
+/* CSS Reset END */
 
 .disableSelection{
     -webkit-touch-callout: none;
@@ -32,29 +34,34 @@ body {
     outline: 0;
 }
 
+/* Complete Phone */
 .container {
     display: none;
+    /* display: block; */
     position: absolute;
     bottom: -70%;
-    right: -1.5vh;
+    /* bottom: 0%; */
+    right: 5vh;
 }
+/*  */
 
 .phone-currentcall-container {
     display: none;
     position: absolute;
-    height: 5.5vh;
-    width: 26vh;
-    background-color: rgba(30, 30, 30, 0.972);
     margin: 0 auto;
     left: 0;
     right: 0;
-    top: 4vh;
-    border-radius: 0.3vh;
-    overflow: hidden;
-    box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.11);
-    z-index: 144;
+    height: 5vh;
+    width: 70%;
+    background-color: rgba(0, 0, 0, 0.65);
+    top: 10vh;
+    z-index: 99;
     transition: background-color .1s linear;
+    border-radius: 3vh;
     animation: pulse 2s infinite;
+}
+.phone-currentcall-container:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .phone-currentcall-icon {
@@ -109,9 +116,10 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+/* Phone Container */
 .phone-frame {
     position: absolute;
-    width: 32vh;
+    width: 30vh;
     bottom: 0;
     right: 0;
     margin: 5vh;
@@ -132,7 +140,7 @@ body {
 
 .phone-background {
     height: 61.7vh;
-    width: 30.5vh;
+    width: 29vh;
     bottom: 1vh;
     border-radius: 3vh;
     right: 0.5vh;
@@ -143,9 +151,13 @@ body {
     background-position-x: center;
     background-repeat: no-repeat;
     overflow: hidden;
-    background-image: url('../img/backgrounds/default-core.png');
+    background-image: url('../img/backgrounds/background-1.png');
 }
 
+/* Phone Container END */
+/* -------------------------- */
+
+/* Phone Header */
 .phone-header {
     width: 100%;
     height: 5vh;
@@ -154,103 +166,102 @@ body {
     color: white;
 }
 
-#phone-time {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.1vh;
-    padding: 2.1vh 0 0 2.1vh;
+#phone-server {
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    font-size: 1vh;
+    padding: 2vh 0 0 1vh;
     float: left;
     color: white !important;
 }
 
 #player-id {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
-    font-size: 1.1vh;
-    padding: 2.1vh 0 0 1vh;
+    font-size: 1vh;
+    padding: 2vh 0 0 1vh;
+    float: left;
+    color: white !important;
+}
+
+#phone-time {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1vh;
+    padding: 2vh 0 0 5.5vh;
     float: left;
     color: white !important;
 }
 
 #phone-icons {
-    font-size: 1.1vh;
-    padding: 2vh 2.5vh 0 0vh;
+    font-size: 0.95vh;
+    padding: 2vh 1.5vh 0 0vh;
     float: right;
     color: white !important;
 }
 
-#phone-arrow {
-    font-size: 1.5vh;
-    top: 0.25vh;
-    left: -8.25vh;
-    position: relative;
-}
-
-#phone-sun {
-    left: -1.2vh;
-    position: relative;
-}
-
-#phone-unlock {
-    left: -0.6vh;
+#phone-signal {
+    font-size: 1vh;
+    left: -0.3vh;
     position: relative;
 }
 
 #phone-battery {
-    top: 0vh;
+    transform: rotate(-90deg);
+    top: -0.1vh;
     position: relative;
 }
 
+/* Phone Header END */
+/* -------------------------- */
+
+/* Phone Application Contanier */
 .phone-application-container {
     display: none;
     position: absolute;
     top: 8%;
-    height: 93%;
+    height: 100%;
     width: 100%;
     background-color: rgb(65, 65, 65);
     z-index: 100;
 }
+/* Phone Application Container END */
+/* -------------------------- */
 
+/* Phone Footer */
 .phone-footer {
     position: absolute;
-    bottom: -0.5vh;
+    bottom: 0;
     height: 5vh;
     width: 100%;
-    background: #00000029;
-    z-index: 140;
-    border-top: 0.1vh solid #0000003b;
 }
 
 .phone-home-container {
-    margin-top: 0.6vh;
     position: relative;
+    height: 2.3vh;
+    width: 100%;
+    margin: 0 auto;
+    top: 2vh;
+    transform: translateY(-50%);
+    border-radius: 0.8vh;
+    transition: .15s;
+    z-index: 500;
 }
 
-.phone-home-button-class {
+.phone-home-button {
     position: relative;
-    height: 100%;
-    width: 20%;
-    text-align: center;
-    float: left;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    transition: .3s;
+    height: 0.5vh;
+    width: 10vh;
+    background-color: white;
+    border-radius: 0.8vh;
+    top: 80%;
+    transform: translateY(-50%);
+    margin: 0px auto;
+    transition: all 0.1s ease 0s;
 }
 
-.phone-home-button-class:hover{
-    color: rgb(165, 165, 165);
-}
+/* Phone Footer END */
 
-.ghasem {
-    position: relative;
-    height: 100%;
-    width: 25%;
-    text-align: center;
-    float: left;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-    transition: .1s;
-}
-
+/* Home Applications */
 .phone-applications {
     position: relative;
     height: 100%;
@@ -268,6 +279,7 @@ body {
     margin-top: 1.5vh;
     border-radius: 1.25vh;
     text-align: center;
+    /* box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.13); */
     opacity: 0.9;
     transition: .05s;
 }
@@ -285,7 +297,7 @@ body {
 .phone-home-applications {
     position: absolute;
     width: 100%;
-    bottom: 13vh;
+    bottom: 17vh;
 }
 
 .phone-application > i {
@@ -296,21 +308,25 @@ body {
 .ApplicationIcon {
     color: white;
 }
+/* Home Applications END */
+
+
+/* Phone Notification */
 
 .phone-notification-container {
     position: absolute;
     height: 5.5vh;
-    width: 26vh;
-    background-color: #343233;
+    width: 22vh;
+    background-color: rgba(39, 39, 39, 0.9);
     margin: 0 auto;
     left: 0;
     right: 0;
     top: -8%;
-    border-radius: 0.3vh;
+    border-radius: 3vh;
     overflow: hidden;
     box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.11);
     z-index: 140;
-  }
+}
 
 .notification-icon {
     position: absolute;
@@ -342,6 +358,8 @@ body {
     overflow: hidden;
 }
 
+/* Phone Notification END */
+
 .call-notifications {
     display: none;
     position: absolute;
@@ -354,7 +372,10 @@ body {
     z-index: -5;
 }
 .call-notifications-shake {
+    /* Start the shake animation and make the animation last for 0.5 seconds */
     animation: shake 0.5s;
+
+    /* When the animation is finished, start again */
     animation-iteration-count: infinite;
 }
 
@@ -465,6 +486,7 @@ body {
     width: 33vh;
     height: 20vh;
     background-color: #004682;
+    /* border: .1vh solid #002f5831; */
     border-radius: 1vh;
     overflow: hidden;
     box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.199);
