--- a/resources/[core]/phone/html/css/phone.css
+++ b/resources/[core]/phone/html/css/phone.css
@@ -4,13 +4,13 @@
     display: none;
     height: 100%;
     width: 100%;
-    background: #202731;
+    background: rgb(36, 36, 36);
     overflow: hidden;
 }
 
 .phone-app-header {
     position: relative;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 2.5vh;
     top: 5vh;
     color: white;
@@ -21,7 +21,7 @@
 #total-contacts {
     position: relative;
     font-size: 1.1vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     top: -3vh;
     color: white;
 }
@@ -30,37 +30,37 @@
     position: absolute;
     height: 5vh;
     width: 100%;
-    bottom: -2vh;
+    bottom: 30px;
     z-index: 101;
 }
 
 .phone-app-footer-button {
     position: relative;
     height: 100%;
-    width: 50%;
+    width: 25%;
     text-align: center;
     float: left;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
     transition: .1s;
 }
 
 .phone-selected-footer-tab {
-    color: #2c465f;
+    color: #dc143c;
 }
 
 .phone-contacts {
     display: block;
     position: absolute;
-    height: 79%;
+    height: 60%;
     width: 100%;
-    top: 4vh;
+    top: 10vh;
 }
 
 .phone-keypad-header {
     padding-top: 6vh;
     padding-left: 3vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.8vh;
 }
 
@@ -78,7 +78,7 @@
     outline: none;
     box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
     text-indent: 1vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     text-align: left;
     line-height: 3.9vh;
     font-size: 1.75vh;
@@ -101,24 +101,12 @@
     height: 100%;
     width: 100%;
     top: 0;
-    background: #202731;
-}
-
-.phone-recent-call-number{
-    position: relative;
-    top: 8%;
-    float: left;
-    left: 85%;
-    color: whitesmoke;
-    transition: 0.25s;
-}
-.phone-recent-call-number:hover{
-    color: #2c465f;
+    background: rgb(36, 36, 36);
 }
 
 .phone-recent-header {
     padding-top: 8vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.8vh;
     color: white;
     text-align: center;
@@ -129,39 +117,27 @@
 .phone-recent-calls {
     position: absolute;
     width: 100%;
-    height: 40vh;
+    height: 35vh;
     margin: 0 auto;
     left: 0;
     right: 0;
-    top: 12vh;
+    top: 15vh;
     overflow-x: hidden;
     overflow-y: scroll;
 }
 .phone-recent-call {
-    /* position: relative;
+    position: relative;
     height: 6.25vh;
     width: 90%;
     left: 15px;
     margin-bottom: 10px;
     background: rgba(23, 23, 23, 90%);
     border-radius: 0.15rem;
-    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000; */
-
-    position: relative;
-    width: 90%;
-    color: white;
-    left: 15px;
-    height: 6.25vh;
-    /* margin-top: 2px; */
-    margin-bottom: 5px;
-    background-color: rgb(44, 70, 95);
-    box-shadow: rgba(0, 0, 0, 0.557) 0rem 0rem 0.1rem 0.01rem;
-    border-radius: 0.15rem;
-    border-bottom: 0.1vh solid rgba(245, 245, 245, 0.68);
+    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
 }
 
 .phone-recent-call:hover {
-    background-color: #15222e;
+    background-color: #dc143c;
 }
 .phone-recent-call-image {
     position: absolute;
@@ -174,7 +150,7 @@
     font-size: 1.6vh;
     color: white;
     border-radius: 50%;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     background: #4e54c8;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #8f94fb, #4e54c8);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #8f94fb, #4e54c8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -184,7 +160,7 @@
     top: 1.1vh;
     left: 6vh;
     color: white;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
 }
 .phone-recent-call-type {
     position: absolute;
@@ -198,7 +174,7 @@
     bottom: 1.1vh;
     right: 1.75vh;
     font-size: 1.2vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
 }
 
@@ -214,8 +190,8 @@
 .phone-keypad-key-call {
     position: absolute;
     margin: 0 auto;
-    bottom: 8vh;
-    left: 12.4vh;
+    bottom: 12vh;
+    left: 11.7vh;
     font-size: 2.5vh;
     height: 5.5vh;
     width: 5.5vh;
@@ -238,7 +214,7 @@
     width: 33.33%;
     text-align: center;
     line-height: 7vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 2vh;
     color: white;
     border-bottom: 2px solid rgba(0, 0, 0, 0);
@@ -261,7 +237,7 @@
     float: right;
     line-height: 4vh;
     font-size: 1.8vh;
-    padding-right: 3.1vh;
+    padding-right: 2vh;
     margin-left: 0.2vh;
     transition: .1s;
     color: white;
@@ -269,7 +245,7 @@
 }
 
 .phone-contacts-header > i:hover {
-    color: #2c465f;
+    color: #dc143c;
 }
 
 /* #phone-search-icon {
@@ -281,38 +257,36 @@
 } */
 
 #contact-search {
-    display: block;
+    display: none;
     position: absolute;
     background: none;
     border: none;
-    background: none;
+    background: rgb(226, 226, 226);
     top: .7vh;
-    width: 70%;
+    width: 17vh;
     margin: 0 auto;
-    left: -17%;
+    left: 0;
     right: 0;
-    opacity: 1;
+    opacity: 0.0;
     height: 2.5vh;
-    /* border-radius: 1vh; */
-    border-bottom: .1vh solid #f5f5f5ad;
-    /* box-shadow: 0 0 .2vh 0 rgba(0, 0, 0, 0.281); */
-    /* font-family: 'Poppins', sans-serif; */
+    border-radius: 1vh;
+    box-shadow: 0 0 .2vh 0 rgba(0, 0, 0, 0.281);
+    font-family: 'Poppins', sans-serif;
     outline: none;
     text-indent: 1vh;
     z-index: 100;
-    color: whitesmoke;
 }
 
-/* #contact-search::placeholder{
+#contact-search::placeholder{
     font-family: 'Poppins', sans-serif;
-} */
+}
 
 .phone-contact-list::-webkit-scrollbar {
     width: .4vh;
 }
 
 .phone-contact-list::-webkit-scrollbar-thumb {
-    background-color: #2c465f;
+    background-color: #dc143c;
 }
 
 .phone-contact-list {
@@ -334,11 +308,10 @@
     left: 15px;
     height: 4.5vh;
     margin-top: 2px;
-    margin-bottom: 5px;
-    background-color: #2c465f;
+    margin-bottom: 10px;
+    background-color: rgba(23, 23, 23, 90%);
     border-radius: 0.15rem;
-    box-shadow: 0rem 0rem 0.1rem 0.01rem #0000008e;
-    border-bottom: .1vh solid #f5f5f5ad;
+    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
 }
 
 .phone-contact-firstletter {
@@ -350,7 +323,7 @@
     text-align: center;
     line-height: 3.5vh;
     border-radius: 50%;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
 }
 
@@ -358,11 +331,11 @@
     position: absolute;
     left: 5vh;
     line-height: 4.5vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.4vh;
 }
 
-/* .phone-contact-actions {
+.phone-contact-actions {
     position: absolute;
     right: 0;
     top: .3vh;
@@ -373,16 +346,15 @@
 
 .phone-contact-actions:hover {
     color: #e74c3c;
-} */
+}
 
 .phone-contact-action-buttons {
-    /* display: none; */
-    visibility: hidden;
+    display: none;
     position: absolute;
-    /* bottom: 1.2vh; */
-    height: 100%;
-    width: 100%;
-    /* margin: 0 auto; */
+    bottom: 1.2vh;
+    height: 5vh;
+    width: 95%;
+    margin: 0 auto;
     left: 0;
     right: 0;
 }
@@ -390,31 +362,23 @@
 .phone-contact-action-buttons > i {
     position: relative;
     float: left;
-    margin-left: 1.8vh;
-    left: 5.0vh;
+    margin-left: 5vh;
+    left: -.2vh;
     top: 1vh;
     font-size: 2.3vh;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    /* transition: .1s; */
+    color: white;
+    transition: .1s;
 }
 
 .phone-contact-action-buttons > i:hover {
-    color: #2c465f;
+    color: #dc143c;
 }
-
-.phone-contact:hover .phone-contact-action-buttons {
-    background: #0d1218c0;
-    visibility: visible;
-}
-
 .phone-add-contact {
     display: none;
     position: absolute;
-    height: 40%;
-    width: 80%;
+    height: 100%;
+    width: 100%;
     top: -100%;
-    left: 10%;
     background: rgb(36, 36, 36);
     z-index: 102;
 }
@@ -422,7 +386,7 @@
 .phone-add-contact-header {
     padding-top: 6vh;
     padding-left: 8vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 2vh;
     color: white;
 }
@@ -430,15 +394,15 @@
 .phone-add-contact-name {
     position: absolute;
     color: white;
-    top: 2.3vh;
+    top: 12vh;
     left: 6vh;
     background: none;
     border: none;
     outline: none;
-    border-bottom: 2px solid #f5f5f5ad;
-    /* font-family: 'Poppins', sans-serif; */
+    border-bottom: 2px solid rgba(0, 0, 0, 0.555);
+    font-family: 'Poppins', sans-serif;
     height: 3.5vh;
-    width: 70%;
+    width: 20vh;
     text-indent: .4vh;
     border-radius: .5vh .5vh 0 0;
     transition: .1s;
@@ -447,7 +411,7 @@
 
 #phone-add-contact-name-icon {
     position: absolute;
-    top: 3.1vh;
+    top: 13.1vh;
     left: 2.1vh;
     font-size: 2.4vh;
     color: white;
@@ -464,15 +428,15 @@
 .phone-add-contact-number {
     position: absolute;
     color: white;
-    top: 8.3vh;
+    top: 19vh;
     left: 6vh;
     background: none;
     border: none;
     outline: none;
-    border-bottom: 2px solid #f5f5f5ad;
-    /* font-family: 'Poppins', sans-serif; */
+    border-bottom: 2px solid rgba(0, 0, 0, 0.555);
+    font-family: 'Poppins', sans-serif;
     height: 3.5vh;
-    width: 70%;
+    width: 20vh;
     text-indent: .4vh;
     border-radius: .5vh .5vh 0 0;
     transition: .1s;
@@ -500,7 +464,7 @@
     border: none;
     outline: none;
     border-bottom: 2px solid rgba(0, 0, 0, 0.555);
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     height: 3.5vh;
     width: 20vh;
     text-indent: .4vh;
@@ -523,7 +487,7 @@
 
 #phone-add-contact-number-icon {
     position: absolute;
-    top: 9.1vh;
+    top: 20.1vh;
     left: 2.1vh;
     font-size: 2.4vh;
     color: white;
@@ -546,38 +510,21 @@
 
 .phone-add-contact-button {
     position: relative;
-    color: black;
+    color: white;
     float: left;
-    width: 30%;
+    width: 50%;
     height: 5vh;
-    margin-left: 13.3%;
     text-align: center;
     line-height: 4.3vh;
-    /* font-family: 'Poppins', sans-serif; */
-    /* border-top: 2px solid #30336b00; */
+    font-family: 'Poppins', sans-serif;
+    border-top: 2px solid #30336b00;
     transition: .1s;
     font-size: 1.4vh;
-    transition: 0.25s;
-    border-radius: 4px;
 }
 
-#add-contact-save{
-    background: #8ee074;
-}
-#add-contact-save:hover{
-    background: #6cac59;
-}
-
-#add-contact-cancel{
-    background: #f5a15b;
-}
-#add-contact-cancel:hover{
-    background: #c27e47;
-}
-
-/* .phone-add-contact-button:hover {
+.phone-add-contact-button:hover {
     border-top: 2px solid #eb4d4b;
-} */
+}
 
 /* EDIT CONTACT YEEY */
 
@@ -596,7 +543,7 @@
     color: white;
     padding-top: 6vh;
     padding-left: 3vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 2vh;
 }
 
@@ -609,7 +556,7 @@
     border: none;
     outline: none;
     border-bottom: 2px solid rgba(0, 0, 0, 0.555);
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     height: 3.5vh;
     width: 20vh;
     text-indent: .4vh;
@@ -643,7 +590,7 @@
     border: none;
     outline: none;
     border-bottom: 2px solid rgba(0, 0, 0, 0.555);
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     height: 3.5vh;
     width: 20vh;
     text-indent: .4vh;
@@ -673,7 +620,7 @@
     border: none;
     outline: none;
     border-bottom: 2px solid rgba(0, 0, 0, 0.555);
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     height: 3.5vh;
     width: 20vh;
     text-indent: .4vh;
@@ -725,7 +672,7 @@
     height: 5vh;
     text-align: center;
     line-height: 4.3vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     border-top: 2px solid #30336b00;
     transition: .1s;
     font-size: 1.4vh;
@@ -737,31 +684,18 @@
 
 /* Phone Call App */
 
-/* .phone-call-app {
+.phone-call-app {
     display: none;
     height: 100%;
     width: 100%;
-    background: #de6262  ;
-    background: -webkit-linear-gradient(to right, #de6262 , #ffb88c);
-    background: linear-gradient(to right, #de6262 , #ffb88c);
+    background: #de6262  ;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #de6262 , #ffb88c);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #de6262 , #ffb88c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: 400% 400%;
 
     -webkit-animation: AnimationName 35s ease infinite;
     -moz-animation: AnimationName 35s ease infinite;
     animation: AnimationName 35s ease infinite;
-    overflow: hidden;
-} */
-.phone-call-app {
-    display: none;
-    height: 20%;
-    width: 100%;
-    background: rgba(30, 30, 30, 0.972);
-   
-    background-size: 400% 400%;
-    
-    -webkit-animation: AnimationName 35s ease infinite;
-    -moz-animation: AnimationName 35s ease infinite;
-    animation: AnimationName 35s ease infinite;  
     overflow: hidden;
 }
 
@@ -774,7 +708,7 @@
     position: relative;
     text-align: center;
     top: 7.5vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 1.1vh;
     text-shadow: 0 0 1vh rgba(0, 0, 0, 0.1);
@@ -783,7 +717,7 @@
     position: relative;
     text-align: center;
     top: 10vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 2.5vh;
     text-shadow: 0 0 1vh rgba(0, 0, 0, 0.1);
@@ -802,7 +736,7 @@
     box-shadow: 0 0 .5vh 0 rgba(0, 0, 0, 0.5);
     animation: pulse 2s infinite;
 }
-/* #incoming-answer {
+#incoming-answer {
     position: absolute;
     bottom: 8vh;
     left: 5vh;
@@ -837,51 +771,7 @@
     color: #e74c3c;
     background-color: rgba(255, 255, 255, 0.8);
     transition: .1s;
-} */
-
-#incoming-answer {
-    display: none;
-    position: absolute;
-    top: 2vh;
-    left: 19vh;
-    /* transform: rotate(90deg); */
-    color: #2ecc70e5;
-    background-color: white;
-    padding: 0.7vh;
-    font-size: 1.2vh;
-    border-radius: 50%;
-    transition: .1s;
-    animation: pulse 2s infinite;
-    /* height: 1vh;
-    width: 1vh; */
 }
-#incoming-answer:hover {
-    color: #2ecc71;
-    background-color: rgba(255, 255, 255, 0.8);
-    transition: .1s;
-}
-#incoming-deny {
-    position: absolute;
-    top: 2vh;
-    right: 1vh;
-    /* transform: rotate(-135deg); */
-    color: #e74d3ce0;
-    background-color: white;
-    padding: 0.7vh;
-    font-size: 1.2vh;
-    border-radius: 50%;
-    transition: .1s;
-    animation: pulse 2s infinite;
-    /* height: 1vh;
-    width: 1vh; */
-}
-#incoming-deny:hover {
-    color: #e74c3c;
-    background-color: rgba(255, 255, 255, 0.8);
-    transition: .1s;
-}
-
-
 
 /* Outgoing */
 
@@ -894,7 +784,7 @@
     position: relative;
     text-align: center;
     top: 7.5vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 1.1vh;
     text-shadow: 0 0 1vh rgba(0, 0, 0, 0.1);
@@ -903,7 +793,7 @@
     position: relative;
     text-align: center;
     top: 10vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 2.5vh;
     text-shadow: 0 0 1vh rgba(0, 0, 0, 0.1);
@@ -993,7 +883,7 @@
     position: relative;
     text-align: center;
     top: 7.5vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 1.1vh;
     text-shadow: 0 0 1vh rgba(0, 0, 0, 0.1);
@@ -1002,7 +892,7 @@
     position: relative;
     text-align: center;
     top: 10vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 2.5vh;
     text-shadow: 0 0 1vh rgba(0, 0, 0, 0.1);
@@ -1025,7 +915,7 @@
     position: relative;
     text-align: center;
     top: 28vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 1.2vh;
     text-shadow: 0 0 1vh rgba(0, 0, 0, 0.1);
@@ -1064,7 +954,7 @@
     height: 8vh;
     top: 5vh;
     text-align: center;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-size: 1.6vh;
     line-height: 5vh;
     color: white;
@@ -1101,7 +991,7 @@
 }
 
 .suggested-contact:hover {
-    background-color: #2c465f;
+    background-color: #dc143c;
 }
 
 .suggested-contact > i {
@@ -1116,13 +1006,13 @@
     position: absolute;
     left: 5vh;
     top: 2.1vh;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 1.3vh;
 }
 
 .suggested-number {
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     color: white;
     font-size: 1.2vh;
 }
@@ -1135,86 +1025,4 @@
           -ms-user-select: none; /* Internet Explorer/Edge */
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Opera and Firefox */
-}
-
-
-.phone-new-box-body{
-    display: none;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 200%;
-    background-color: rgba(0, 0, 0, 0.624);
-    z-index: 700;
-}
-
-.phone-new-box-main{
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    padding-top: 3%;
-    padding-bottom: 3%;
-    width: 80%;
-    /* height: 100%; */
-    background-color: rgb(44, 70, 95);
-    border-radius: 4px;
-}
-
-.phone-new-input-class{
-    position: relative;
-    margin-left: 10%;
-    margin-bottom: 5%;
-    /* height: 4vh; */
-    width: 80%;
-    /* border-radius: 1vh; */
-    border: none;
-    background: none;
-    outline: none;
-    /* box-shadow: 0rem 0rem 0.1rem 0.05rem #000000; */
-    text-indent: 1vh;
-    /* font-family: 'Poppins', sans-serif; */
-    text-align: left;
-    line-height: 3.9vh;
-    font-size: 1.75vh;
-    overflow: hidden;
-    color: white;
-    border-bottom: .1vh solid #f5f5f5ad;
-    transition: 0.25s;
-}
-
-.phone-new-box-btn{
-    display: inline;
-    width: 20%;
-    transition: 0.25s;
-    padding: 2%;
-    border-radius: 4px;
-    color: black;
-    font-size: 95%;
-    margin-top: 10%;
-}
-
-.box-new-red{
-    background: #f5a15b;
-    margin-left: 10%;
-}
-.box-new-red:hover{
-    background: #c27e47;
-}
-.box-new-green{
-    background: #8ee074;
-    margin-left: 27%;
-}
-.box-new-green:hover{
-    background: #6cac59;
-}
-
-.phone-new-box-main input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-}
-
-.phone-new-input-class:focus {
-    border-bottom: .1vh solid #8ee074;
 }
