--- a/resources/[core]/phone/html/css/qstore.css
+++ b/resources/[core]/phone/html/css/qstore.css
@@ -14,6 +14,7 @@
     width: 100%;
     height: 9vh;
     color: black;
+    /* background-color: gray; */
     border-bottom: .3vh solid rgb(224, 224, 224);
 }
 
@@ -29,16 +30,21 @@
     position: absolute;
     width: 92%;
     height: 80%;
+
     bottom: 2%;
     left: 0;
+
     margin: 0 auto;
     left: 0;
     right: 0;
+
     background: rgb(243, 243, 243);
     border-radius: .5vh;
+
     -webkit-box-shadow: 0px 0px 7px px rgba(0,0,0,0.15);
     -moz-box-shadow: 0px 0px 7px 4px rgba(0,0,0,0.15);
     box-shadow: 0px 0px 7px 4px rgba(0,0,0,0.15);
+
     overflow: hidden;
 }
 
@@ -47,9 +53,13 @@
     width: 100%;
     height: 7vh;
     background-color: rgb(245, 245, 245);
+    
     margin: 0 auto;
     margin-bottom: .8vh;
+
     border-bottom: 0.2vh solid rgb(177, 177, 177);
+
+    /* border-radius: .6vh; */
 }
 
 .storeapp-icon {
@@ -57,8 +67,10 @@
     width: 5vh;
     height: 5vh;
     background-color: #575fcf;
+
     margin: 1vh;
     border-radius: .3vh;
+
     box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.05);
 }
 
@@ -110,6 +122,7 @@
     right: 2vh;
     font-size: 2vh;
     color: #4488e7;
+
     transition: .05s ease-in-out;
 }
 
@@ -170,6 +183,7 @@
     border: none;
     outline: none;
     top: 7vh;
+
     border-bottom: .2vh solid rgb(209, 209, 209);
     font-family: 'Poppins', sans-serif;
     text-align: center;
@@ -209,6 +223,7 @@
     left: 0;
     right: 5.2vh;
     text-align: center;
+
     font-size: 1.9vh;
     transition: 0.1s linear;
 }
@@ -222,6 +237,7 @@
     left: 5.2vh;
     right: 0;
     text-align: center;
+
     font-size: 2vh;
     transition: 0.1s linear;
 }
