--- a/resources/[core]/phone/html/css/racing.css
+++ b/resources/[core]/phone/html/css/racing.css
@@ -4,7 +4,7 @@
     display: none;
     height: 100%;
     width: 100%;
-    background-color: #202731;
+    background-color: rgb(31, 31, 31);
     overflow: hidden;
 }
 
@@ -185,26 +185,23 @@
 }
 
 #join-race {
-    background-color: #8ee074;
-    color: black;
-}
-
-#join-race:hover {
-    background-color: #6cac59;
+    background-color: #44bd32;
 }
 
 #quit-race {
-    background-color: #f5a15b;
-    color: black;
+    background-color: #c23616;
+}
+
+#join-race:hover {
+    background-color: #4dcf39;
 }
 
 #quit-race:hover {
-    background-color: #c27e47;
+    background-color: #e43c17;
 }
 
 #start-race {
     background-color: #0590db;
-    color: black;
 }
 
 #start-race:hover {
@@ -212,11 +209,12 @@
 }
 
 .racing-setup {
+    /* display: none; */
     display: block;
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #202731;
+    background-color: rgb(31, 31, 31);
     z-index: 102;
     left: -30vh;
 }
@@ -440,22 +438,22 @@
 }
 
 #setup-race-accept {
-    background-color: #8ee074;
-    color: black;
-}
-
-#setup-race-accept:hover {
-    background-color: #6cac59;
+    background-color: #4ece3b;
 }
 
 #setup-race-cancel {
-    background-color: #f5a15b;
-    color: black;
+    background-color: #d33013;
+}
+
+#setup-race-accept:hover {
+    background-color: #5ceb46;
 }
 
 #setup-race-cancel:hover {
-    background-color: #c27e47;
+    background-color: #eb3515;
 }
+
+/* Create */
 
 #racing-create-tracknameheader {
     position: absolute;
@@ -465,8 +463,36 @@
     font-family: 'Poppins', sans-serif;
 }
 
+.racing-create-trackname {
+    position: absolute;
+    width: 20vh;
+    height: 4vh;
+    top: 2.6vh;
+    left: 1.5vh;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    border-bottom: .2vh solid rgb(0, 0, 0);
+    font-family: 'Poppins', sans-serif;
+    color: rgb(0, 0, 0);
+    transition: .1s linear;
+}
+
+.racing-create-trackname:focus {
+    border-bottom: .2vh solid rgb(255, 137, 40);
+}
+
+.racing-create-trackname:valid {
+    border-bottom: .2vh solid rgb(55, 199, 27);
+}
+
+.racing-create-trackname::-webkit-inner-spin-button {
+    display: none;
+}
+
 .racing-create {
     display: none;
+    /* display: block; */
     position: absolute;
     width: 100%;
     height: 100%;
@@ -538,7 +564,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #202731;
+    background-color: rgb(31, 31, 31);
     z-index: 102;
     left: -30vh;
 }
@@ -642,6 +668,7 @@
     right: 0;
     top: 9.5vh;
     overflow-y: scroll;
+    /* background-color: rgba(77, 2, 2, 0.685); */
 }
 
 .racing-leaderboard-details-block-list::-webkit-scrollbar {
